test: 테스트 코드 작성

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -14,4 +14,7 @@ spring:
       ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
-
+jwt:
+  secret-key: test-secret-key-test-secret-key-test-secret-key
+  access-exp-time: 60000  # 1분
+  refresh-exp-time: 3600000 # 1시간
